--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.ruleml.translation.ruleml2tptp</groupId>
+  <groupId>org.ruleml.translation</groupId>
   <artifactId>ruleml2tptp</artifactId>
   <version>1.1</version>
   <packaging>jar</packaging>
