--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.ruleml.translation</groupId>
   <artifactId>ruleml2tptp</artifactId>
-  <version>1.1</version>
+  <version>2.0</version>
   <packaging>jar</packaging>
 
   <name>ruleml2tptp</name>
@@ -78,6 +78,24 @@
             </goals>
             <configuration>
               <includeScope>compile</includeScope>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.5.3</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <configuration>
+              <descriptors>
+                <descriptor>src/assembly/bin.xml</descriptor>
+              </descriptors>
             </configuration>
           </execution>
         </executions>
