--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>2.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>ruleml2tptp</name>
+    <name>RuleML2TPTP</name>
     <url>https://github.com/RuleML/RuleML2TPTP</url>
 
     <properties>
